add captions to photos page

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
         <p id="p1">~ "Really tasty food, very reasonably priced, good-sized portions."</p>
         <p id="p2">~ "Convenient location, sufficient parking"</p>
         <p id="p3">~ "Friendly, helpful, and quick service"</p>
-        <p id="p4">~ "Delicious asian beverages"</p>
-        <p id="p5">~ "Such a fun experience"</p>
+        <p id="p4">~ "Delicious Asian beverages"</p>
+        <p id="p5">~ "Authentic, Korean food"</p>
       </div>
+      <p id="comments">-customer comments</p>
     </div>
 
       <div style="clear: both"></div>
