add embedded google map

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div style="clear: both"></div>
 
     <div >
-      <img src="images/pork.png" id="homepic" alt="Spicy Pork">
+      <img src="images/ramen.png" id="homepic" alt="Ramen">
       <div class="textbox">
         <p id="p1">~ "Really tasty food, very reasonably priced, good-sized portions."</p>
         <p id="p2">~ "Convenient location, sufficient parking"</p>
@@ -47,7 +47,7 @@
         <p id="p4">~ "Delicious Asian beverages"</p>
         <p id="p5">~ "Authentic, Korean food"</p>
       </div>
-      <p id="comments">-customer comments</p>
+      <p id="comments">- real customer comments</p>
     </div>
 
       <div style="clear: both"></div>
