remove link from address on contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,7 +47,7 @@
         <p class="head">Phone:</p>
         <p class="body"><a href="tel:801-669-3468">(801) 669-3468</a></p>
         <p class="head">Address:</p>
-        <p class="body"><a href="https://www.google.com/maps/place/Koko+Lunchbox/@40.2497829,-111.6583266,18.25z/data=!4m5!3m4!1s0x0:0x24ef3f25dd416519!8m2!3d40.249753!4d-111.6574809" target="_blank">1175 N Canyon Rd, Provo, Utah</a></p>
+        <p class="body">1175 N Canyon Rd, Provo, Utah</p>
       </div>
    
       <a href="https://www.google.com/maps/place/Koko+Lunchbox/@40.2497829,-111.6583266,18.25z/data=!4m5!3m4!1s0x0:0x24ef3f25dd416519!8m2!3d40.249753!4d-111.6574809" target="_blank"><div id="map"></div></a>
